2007-11-03  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Naming.xml.in: Added the Uri for
	DetectNonAlphaNumericsInTypeNamesRule.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesRule.cs: Rework rule to avoid 
	strings, dependency on string/enum position and creating a 
	MessageCollection unless we need one.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesRule.cs: New rule (Nidhi Rawal, GSoC 2007)
	* Gendarme.Rules.Naming.mdp: Update project file.
	* Gendarme.Rules.Naming.xml.in: Update rule descriptions.
	* Makefile.am: Add new rules/tests to build.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Naming.mdp: New.  Created MonoDevelop project file for the
	naming rules.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Naming.xml.in: Added Uri for the rules.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Naming.xml.in: Fixed error from copy and paste for the
	performance xml file.  The correct namespace is Gendarme.Rules.Naming.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* UsePluralNameInFlagEnumsRule.cs,
	UsePluralNameInEnumFlagsRule.cs:  Rename 
	UsePluralNameInFlagEnumsRule.cs to UsePluralNameInEnumFlagsRule.cs
	because this file doesn't follow the coding guidelines.
	* Makefile.am: Change files to build the renamed rule.

2007-09-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AttributeEndsWithAttributeSuffixRule.cs:  Change cast to as operator
	for avoid two type tests in method body.

2007-09-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AttributeEndsWithAttributeSuffixRule.cs:  Fixed a
	NullReferenceException when the current type is System.Object.  Change
	cast to as operator for avoid two type tests.

2007-09-13  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: New.  Build Gendarme.Rules.Naming rules and tests.